tests/NormalTests/paczka2/big_fuzzy/35397945.err
Error in line 3: mXRUPWy5 A127 3,3
Error in line 4: DntmO S152 8,9
Error in line 19: mXRUPWy5 A127 88,6
Error in line 17: DntmO A716 5,7
Error in line 20: mXRUPWy5 S152 22,5
Error in line 27: esW8CBY73 A127 225,2
Error in line 26: 14NYW A716 64,9
Error in line 29: 14NYW S152 42,2
Error in line 34: 14NYW A127 22,6
Error in line 41: kuAidw6KQgj A127 -2,5
Error in line 46: A127 A743 85,90
Error in line 57: mXRUPWy5 A743 53,2
Error in line 37: kuAidw6KQgj A127 73,2
Error in line 62: A127 A743 31,9
Error in line 71: mXRUPWy5 A716 136,7
Error in line 84: 14NYW A127 7,5
Error in line 94: 26fyhg S152 5,4
Error in line 92: 14NYW A743 28,4
Error in line 102: DntmO A127 -3,7
Error in line 95: 26fyhg A743 99,3
Error in line 96: DntmO A127 78,3
Error in line 104: 26fyhg A716 1,9
Error in line 116: DntmO A127 43,7
Error in line 90: mXRUPWy5 A743 144,0
Error in line 123: kuAidw6KQgj A743 307,7
Error in line 148: DntmO A743 23,6
Error in line 127: mXRUPWy5 S152 12,9
Error in line 152: DntmO S152 51,3
Error in line 182: esW8CBY73 A127 0,2
Error in line 186: 14NYW A127 22,7
Error in line 195: DntmO A716 158,4
Error in line 201: kuAidw6KQgj A716 87,6
Error in line 196: DntmO A743 66,3
Error in line 203: kuAidw6KQgj A127 54,4
Error in line 213: 14NYW A127 22,5
Error in line 215: 14NYW S152 27,0
Error in line 226: mXRUPWy5 A127 99,4
Error in line 230: DntmO A716 67,7
Error in line 232: 26fyhg A716 14,4
Error in line 240: mXRUPWy5 A127 5,0
Error in line 244: A127 A716 22,1
Error in line 246: mXRUPWy5 A716 70,2
